# screenshot-tool

./: .gitignore  Cargo.toml  README.md  current-progress.md  screenshot-daemon
daemon/: Cargo.toml  UPSTREAM-README.md  src  start.sh
region-selector/: Cargo.toml  LICENSE  region_selector.rs
screenshot-daemon/: Cargo.toml  README.md  start.sh
screenshot-daemon/src/: capi_runtime.rs  capture.rs  cli_trigger.rs  clipboard.rs  config.rs  dbus_service.rs  deps.rs  deps_dialog.rs  detect.rs  hotkey.rs  lib.rs  main.rs  naming.rs  notify.rs  record_border.rs  record_control.rs  record_region_overlay.rs  recorder.rs  region_selector.rs  selector_proc.rs  tray.rs
scripts/: pack_to_7z.sh  package_deb.sh  package_rpm.sh  release_folder.sh  sync_screenshot_daemon.sh  verify-region-subprocess.sh
