[workspace]
resolver = "2"
members = [
    "screenshot-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.dev]
opt-level = 0
lto = false
debug = 0
strip = true
codegen-units = 256

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = 0
panic = "abort"
