[package]
name = "screenshot-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux screenshot daemon with region selection, annotation tools, and D-Bus notification"
keywords = ["screenshot", "linux", "annotation", "daemon", "x11"]
categories = ["command-line-utilities", "gui", "multimedia::images"]
readme = "UPSTREAM-README.md"

[[bin]]
name = "screenshot-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
dirs.workspace = true
env_logger.workspace = true
evdev.workspace = true
futures-lite.workspace = true
image.workspace = true
libc.workspace = true
libwayshot.workspace = true
log.workspace = true
tokio.workspace = true
x11rb.workspace = true
zbus.workspace = true
