[package]
name = "region-selector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone screenshot region selector and annotation tool"
keywords = ["screenshot", "linux", "annotation", "region-selector", "x11"]
categories = ["command-line-utilities", "gui", "multimedia::images"]

[[bin]]
name = "region-selector"
path = "region_selector.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
x11rb.workspace = true
