[package]
name = "screenshot-daemon"
version = "0.1.0"
edition = "2021"
description = "Linux screenshot daemon with region selection, annotation tools, and D-Bus notification"
license = "MIT"
keywords = ["screenshot", "linux", "annotation", "daemon", "x11"]
categories = ["command-line-utilities", "gui", "multimedia::images"]
readme = "README.md"
exclude = []
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[lib]
name = "region_selector"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "screenshot-daemon"
path = "src/main.rs"

[[bin]]
name = "region-selector"
path = "src/region_selector.rs"

[[bin]]
name = "deps-dialog"
path = "src/deps_dialog.rs"

[dependencies]
evdev = "0.12"
x11rb = { version = "0.13", features = ["shm"] }
libwayshot = "0.7"
zbus = "5"
image = "0.25"
chrono = "0.4"
dirs = "6"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs", "signal", "io-util"] }
libc = "0.2"
anyhow = "1"
futures-lite = "2"
arboard = "3"
eframe = "0.30"
egui = "0.30"
ffmpeg-next = { version = "7.1.0", default-features = false, features = ["codec", "format", "software-scaling"] }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = { version = "0.19", default-features = false }
wayland-client = "0.31"
wayland-backend = { version = "0.3", default-features = false }
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
